# vio-tests

./: .gitmodules
config/camera_calibration/: iavcam_front_calibration.yaml  iavcam_rear_calibration.yaml
launch/: log_odom.launch  pixel_phone_topics.launch  start_run.launch  start_run_fu_vehicle.launch  start_run_hkust_vi_car.launch  start_run_orb_fu_vehicle.launch  start_run_pixel_phone_dataset.launch  start_run_vins_kaist.launch  test_driving_car.launch
results/: full_speed_reset_failure_criteria2_vins_odom.csv  full_speed_reset_failure_criteria_vins_odom.csv  half_speed.csv  half_speed_3_vins_odom.csv  half_speed_just_reset_big_translation_vins_odom.csv  normal_speed_allow_high_acc_bias_increased_acc_noise2_0_3_vins_odom.csv  normal_speed_increased_noise_vins_odom.csv  normal_speed_vins_odom.csv  normal_speed_with_pose_graph2_vins_odom.csv  normal_speed_with_pose_graph_vins_odom.csv  plot_v.py  twist_vins_odom.csv  vins_odom_1.csv
results/fu_vehicle/: plot_v.py
results/fu_vehicle/quite_good_result/: config.txt  features_normal_speed_test.csv
results/fu_vehicle/test1/: features_normal_speed_test.csv  vins_odom_normal_speed_test.csv
results/fu_vehicle/test2/: vins_odom_half_speed_test.csv
results/fu_vehicle/test_allow_big_errors_before_reset/: config.txt  features_normal_speed_test.csv  vins_odom_normal_speed_test.csv
results/fu_vehicle/test_bias_logging/: features_normal_speed_test.csv  vins_bias_normal_speed_test.csv
results/fu_vehicle/test_harris/: features_.csv  vins_bias_.csv  vins_odom_.csv
results/fu_vehicle/test_higher_acc_random_walk2/: vins_bias_normal_speed_test.csv
results/fu_vehicle/test_higher_acc_random_walk_allow_high_bias_estimation/: vins_odom_normal_speed_test.csv
results/fu_vehicle/test_rpy_slow/: vins_odom_half_speed_test.csv
results/fu_vehicle/tune_feature_tracker/: vins_bias_normal_speed_test.csv  vins_odom_normal_speed_test.csv
results/hkust_small_rc_car/: features_pseudo_ground_truth.csv  parsed_pseudo_ground_truth.csv  plot_csv_data.py  prepare_csv_ground_truth.py  pseudo_ground_truth.csv  vins_odom_pseudo_ground_truth.csv
results/hkust_small_rc_car/test_run_1/: features_1.csv  vins_bias_1.csv  vins_odom_1.csv
results/hkust_small_rc_car/test_run_2/: features_2.csv  vins_bias_2.csv  vins_odom_2.csv
results/hkust_small_rc_car/test_run_3/: features_.csv  vins_bias_.csv  vins_odom_.csv
results/hkust_small_rc_car/test_run_harris/: features_.csv  vins_bias_.csv  vins_odom_.csv
results/kaist_urban/: plot_csv_data.py
results/kaist_urban/test1/: features.csv  vins_bias.csv
results/kaist_urban/urban-27/: plot_csv_data.py
results/kaist_urban/urban-27/test1/: vins_odom.csv
results/kaist_urban/urban-27/test2/: features.csv  vins_bias.csv  vins_odom.csv
results/kaist_urban/urban-27/test3/: features.csv  vins_bias.csv  vins_odom.csv
results/kaist_urban/urban-27/test_with_td_estimation/: features.csv  vins_bias.csv  vins_odom.csv
results/kaist_urban/urban-39/: plot_csv_data.py
results/kaist_urban/urban-39/test1/: features.csv  vins_bias.csv  vins_odom.csv
results/quite_good_result/: vins_odom_normal_speed_test.csv
results/test2/: features_half_speed_test.csv
results/test_allow_big_errors_before_reset/: vins_bias_normal_speed_test.csv
results/test_bias_logging/: vins_odom_normal_speed_test.csv
results/test_higher_acc_random_walk2/: config.txt  features_normal_speed_test.csv  vins_odom_normal_speed_test.csv
results/test_higher_acc_random_walk_allow_high_bias_estimation/: config.txt  features_normal_speed_test.csv  vins_bias_normal_speed_test.csv
results/test_rpy/: features_normal_speed_test.csv  vins_bias_normal_speed_test.csv  vins_odom_normal_speed_test.csv
results/test_rpy_slow/: features_half_speed_test.csv  vins_bias_half_speed_test.csv
results/tune_feature_tracker/: config.txt  features_normal_speed_test.csv
results/tune_feature_tracker_2/: features_normal_speed_test.csv  vins_bias_normal_speed_test.csv  vins_odom_normal_speed_test.csv
rviz/: extrinsic_parameter.csv  hkust_vi_car.rviz  kaist_dataset.rviz  svo_test.rviz  test_car.rviz  test_feature_trackers.rviz  vins_result_no_loop.csv
src/camera_info_publisher/: CMakeLists.txt  package.xml
src/camera_info_publisher/src/: publisher.py
src/data_logging/: CMakeLists.txt  package.xml  setup.py
src/data_logging/launch/: imu_logger.launch
src/data_logging/src/data_logging/: imu_logger.py  odom_logger.py  tracked_features_logger.py
src/feature_tracker_evaluation/: CMakeLists.txt  package.xml  setup.py
src/feature_tracker_evaluation/src/: evaluator.py
src/imu_add_gravity/: CMakeLists.txt  package.xml
src/imu_add_gravity/src/: publisher.py
src/logging_msgs/: CMakeLists.txt  package.xml
src/logging_msgs/msg/: Bias.msg  Td.msg  TrackedFeatures.msg
src/odom_logger/: CMakeLists.txt  package.xml  setup.py
src/odom_logger/launch/: logger.launch
src/odom_logger/src/: bias_logger.py  logger.py
src/odom_path_publisher/: CMakeLists.txt  package.xml
src/odom_path_publisher/src/: publisher.py
src/odom_publisher/: CMakeLists.txt  package.xml
src/odom_publisher/src/: publisher.py
urdf/: hkust_vi_car.urdf  kaist_car.urdf  mig.urdf
