<?xml version="1.0"?>
<package format="2">
  <name>data_logging</name>
  <version>0.0.0</version>
  <description>Log data to csv</description>
  <author>Mikolaj Walukiewicz</author>
  <maintainer email="mikolaj@peregrine.ai">Mikolaj Walukiewicz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>logging_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

</package>
